--- a/docs/setup/upgrade/resolving-migration-failures.asciidoc
+++ b/docs/setup/upgrade/resolving-migration-failures.asciidoc
@@ -21,17 +21,18 @@ If you're unable to resolve a failed migration, contact Support.
 
 [float]
 [[upgrade-migrations-old-indices]]
-==== Handling old `.kibana_N` indices
+==== Handle old `.kibana_N` indices
 
 After the migrations complete, multiple {kib} indices are created in {es}: (`.kibana_1`, `.kibana_2`, `.kibana_7.12.0` etc).
 {kib} only uses the index that the `.kibana` and `.kibana_task_manager` aliases point to.
 The other {kib} indices can be safely deleted, but are left around as a matter of historical record, and to facilitate rolling {kib} back to a previous version.
 
 [float]
-==== timeout_exception or receive_timeout_transport_exception
-There is a known issue in 7.12.0 for users who tried the {fleet} beta.
-Upgrade migrations fail because of a large number of documents in the `.kibana` index, which causes {kib} to log errors such as:
-
+==== Handle known issues with {fleet} beta
+If you see a`timeout_exception` or `receive_timeout_transport_exception` error,
+it might be from a known known issue in 7.12.0 if you tried the {fleet} beta.
+Upgrade migrations fail because of a large number of documents in the `.kibana` index,
+which causes {kib} to log errors such as:
 
 [source,sh]
 --------------------------------------------
@@ -42,8 +43,9 @@ Error: Unable to complete saved object migrations for the [.kibana] index. Pleas
 
 For instructions on how to mitigate the known issue, refer to https://github.com/elastic/kibana/issues/95321[the GitHub issue].
 
+
 [float]
-==== Corrupt saved objects
+==== Handle corrupt saved objects
 To find and remedy problems caused by corrupt documents, we highly recommend testing your {kib} upgrade in a development cluster,
 especially when there are custom integrations that create saved objects in your environment.
 
@@ -83,18 +85,17 @@ DELETE .kibana_7.12.0_001/_doc/marketing_space:dashboard:e3c5fc71-ac71-4805-bcab
 +
 The dashboard with the `e3c5fc71-ac71-4805-bcab-2bcc9cc93275` ID that belongs to the `marketing_space` space **is no longer available**.
 
-Be sure you have a snapshot before you delete the corrupt document. If you are unable to restore from a snapshot, it is recommended to also delete the `temp` and `target` indices the migration creates before you restart {kib} and retry the snapshot restore.
-
 [float]
-==== User defined index templates that cause new `.kibana*` indices to have incompatible settings or mappings
-Matching index templates that specify `settings.refresh_interval` or `mappings` are known to interfere with {kib} upgrades.
+==== Handle incompatible settings or mappings
+Matching index templates that specify `settings.refresh_interval` or
+`mappings` are known to interfere with {kib} upgrades.
+This can happen when index templates are defined manually.
 
 To make sure the index templates won't apply to new `.kibana*` indices, narrow down the {data-sources} of any user-defined index templates.
 
-NOTE: In {kib} 6.5.0 and earlier, {kib} creates a `kibana_index_template:.kibana` index template
-and uses a `.kibana` index pattern. You do not need to change or remove the index template.
-
 [float]
-==== Incompatible `xpack.tasks.index` configuration setting
-In {kib} 7.5.0 and earlier, when the task manager index is set to `.tasks` with the configuration setting `xpack.tasks.index: ".tasks"`,
-upgrade migrations fail. In {kib} 7.5.1 and later, the incompatible configuration setting prevents upgrade migrations from starting.
+==== Handle incompatible `xpack.tasks.index` configuration setting
+In {kib} 7.5.0 and earlier, when the task manager index is set to `.tasks`
+with the configuration setting `xpack.tasks.index: ".tasks"`,
+upgrade migrations fail. In {kib} 7.5.1 and later, the incompatible configuration
+setting prevents upgrade migrations from starting.
