--- a/docs/setup/upgrade/saved-objects-migration.asciidoc
+++ b/docs/setup/upgrade/saved-objects-migration.asciidoc
@@ -31,12 +31,36 @@ adds a write block to the outdated index. Table 1 lists the saved objects indice
 [options="header"]
 |=======================
 |Upgrading from version | Outdated index (alias)
-| 6.0.0 through 6.4.x    | `.kibana`
-
-`.kibana_task_manager_7.12.0_001` (`.kibana_task_manager` alias)
 | 6.5.0 through 7.3.x    | `.kibana_N` (`.kibana` alias)
 | 7.4.0 through 7.11.x
 | `.kibana_N` (`.kibana` alias)
 
 `.kibana_task_manager_N` (`.kibana_task_manager` alias)
 |=======================
+
+
+[float]
+[[unknown-saved-object-types]]
+==== Documents found for unknown saved object types
+Migrations will fail if saved objects belong to an unknown
+saved object type. Unknown saved objects are typically caused by
+the {es} index, or by disabling a plugin that had previously
+created a saved object.
+
+We recommend using the {kibana-ref}/7.17/upgrade-assistant.html[Upgrade Assistant]
+to discover and remedy any unknown saved object types. {kib} version 7.17.0 deployments containing unknown saved
+object types will also log the following warning message:
+
+[source,sh]
+--------------------------------------------
+CHECK_UNKNOWN_DOCUMENTS Upgrades will fail for 8.0+ because documents were found for unknown saved object types.
+To ensure that upgrades will succeed in the future, either re-enable plugins or delete these documents from the ".kibana_7.17.0_001" index after the current upgrade completes.
+--------------------------------------------
+
+If you fail to remedy this, your upgrade to 8.0+ will fail with a message like:
+
+[source,sh]
+--------------------------------------------
+Unable to complete saved object migrations for the [.kibana] index: Migration failed because documents were found for unknown saved object types.
+To proceed with the migration, please delete these documents from the ".kibana_7.17.0_001" index.
+--------------------------------------------
