--- a/docs/setup/upgrade/saved-objects-migration.asciidoc
+++ b/docs/setup/upgrade/saved-objects-migration.asciidoc
@@ -47,7 +47,7 @@ saved object type. Unknown saved objects are typically caused by
 the {es} index, or by disabling a plugin that had previously
 created a saved object.
 
-We recommend using the {kibana-ref}/7.17/upgrade-assistant.html[Upgrade Assistant]
+We recommend using the {kibana-ref-all}/7.17/upgrade-assistant.html[Upgrade Assistant]
 to discover and remedy any unknown saved object types. {kib} version 7.17.0 deployments containing unknown saved
 object types will also log the following warning message:
 
