--- a/docs/setup/upgrade/resolving-migration-failures.asciidoc
+++ b/docs/setup/upgrade/resolving-migration-failures.asciidoc
@@ -86,6 +86,33 @@ DELETE .kibana_7.12.0_001/_doc/marketing_space:dashboard:e3c5fc71-ac71-4805-bcab
 The dashboard with the `e3c5fc71-ac71-4805-bcab-2bcc9cc93275` ID that belongs to the `marketing_space` space **is no longer available**.
 
 [float]
+[[unknown-saved-object-types]]
+==== Handle documents for unknown saved objects
+Migrations will fail if saved objects belong to an unknown
+saved object type. Unknown saved objects are typically caused by
+the {es} index, or by disabling a plugin that had previously
+created a saved object.
+
+We recommend using the {kibana-ref-all}/7.17/upgrade-assistant.html[Upgrade Assistant]
+to discover and remedy any unknown saved object types. {kib} version 7.17.0 deployments containing unknown saved
+object types will also log the following warning message:
+
+[source,sh]
+--------------------------------------------
+CHECK_UNKNOWN_DOCUMENTS Upgrades will fail for 8.0+ because documents were found for unknown saved object types.
+To ensure that upgrades will succeed in the future, either re-enable plugins or delete these documents from the ".kibana_7.17.0_001" index after the current upgrade completes.
+--------------------------------------------
+
+If you fail to remedy this, your upgrade to 8.0+ will fail with a message like:
+
+[source,sh]
+--------------------------------------------
+Unable to complete saved object migrations for the [.kibana] index: Migration failed because documents were found for unknown saved object types.
+To proceed with the migration, please delete these documents from the ".kibana_7.17.0_001" index.
+--------------------------------------------
+
+
+[float]
 ==== Handle incompatible settings or mappings
 Matching index templates that specify `settings.refresh_interval` or
 `mappings` are known to interfere with {kib} upgrades.
