[DOCS] Updates the Upgrade docs (#125288)
* [DOCS] Adds redirect for Standard Upgrade doc

* [DOCS] Updates Upgrade docs

* [DOCS] Incorporates review comments

* [DOCS] Adds info on saved objects

* [DOCS] Fixes broken link

* [DOCS] Fixes placement of section on unknown saved objects

* [DOCS] Removes duplicate topic

(cherry picked from commit a13dafc7dde4105c4aa269c23badab159868e1fc)

--- a/docs/redirects.asciidoc
+++ b/docs/redirects.asciidoc
@@ -386,15 +386,15 @@ This content has moved. Refer to <<managing-data-views>>.
 
 This content has moved. Refer to <<kibana-role-management>>.
 
-[role="exclude",id="logging-configuration-changes"]
-== Logging configuration changes
-
-This content has moved. Refer to <<logging-config-changes>>.
-
 [role="exclude",id="upgrade-migrations"]
 == Upgrade migrations
 
 This content has moved. Refer to <<saved-object-migrations>>.
+
+[role="exclude",id="upgrade-standard"]
+== Standard Upgrade
+
+This content has moved. Refer to {stack-ref}/upgrading-kibana.html[Upgrade Kibana].
 
 [role="exclude",id="upgrade-assistant"]
 == Upgrade Assistant
