--- a/docs/settings/reporting-settings.asciidoc
+++ b/docs/settings/reporting-settings.asciidoc
@@ -67,8 +67,8 @@ reports, you might need to change the following settings.
 How often the index that stores reporting jobs rolls over to a new index. Valid values are `year`, `month`, `week`, `day`, and `hour`. Defaults to `week`.
 
 [[xpack-reportingQueue-pollEnabled]] `xpack.reporting.queue.pollEnabled` {ess-icon}::
-Set to `true` (default) to enable the {kib} instance to poll Elasticsearch for pending jobs and claim them for
-execution. Setting this to `false` allows the {kib} instance to only add new jobs to the reporting queue, list
+When `true`, enables the {kib} instance to poll {es} for pending jobs and claim them for
+execution. When `false`, allows the {kib} instance to only add new jobs to the reporting queue, list
 jobs, and provide the downloads to completed reports through the UI. This requires a deployment where at least
 one other Kibana instance in the Elastic cluster has this setting to `true`.
 
