--- a/docs/user/alerting/rule-types/es-query.asciidoc
+++ b/docs/user/alerting/rule-types/es-query.asciidoc
@@ -6,11 +6,6 @@ The {es} query rule type runs a user-configured query, compares the number of
 matches to a configured threshold, and schedules actions to run when the 
 threshold condition is met.
 
-The rule type checks for duplication of document matches across rule executions. 
-If you configure the rule with a schedule interval smaller than the time window, 
-and a document matches a query in multiple rule executions, it is alerted on 
-only once. The rule uses the timestamp of the matches for checking duplications.
-
 
 [float]
 ==== Create the rule
@@ -96,3 +91,36 @@ image::user/alerting/images/rule-types-es-query-valid.png[Test {es} query return
 +
 [role="screenshot"]
 image::user/alerting/images/rule-types-es-query-invalid.png[Test {es} query shows error when invalid]
+
+[float]
+==== Handling multiple matches of the same document
+
+This rule type checks for duplication of document matches across rule 
+executions. If you configure the rule with a schedule interval smaller than the 
+time window, and a document matches a query in multiple rule executions, it is 
+alerted on only once.
+
+The rule uses the timestamp of the matches to avoid alerting on the same match 
+multiple times. The timestamp of the latest match is used for evaluating the 
+rule conditions when the rule is executed. Only matches between the latest 
+timestamp from the previous execution and the actual rule execution are 
+considered.
+
+Suppose you have a rule configured to run every minute. The rule uses a time 
+window of 1 hour and checks if there are more than 99 matches for the query. The 
+{es} query rule type does the following:
+
+[cols="3*<"]
+|===
+| `Execution 1 (0:00)`
+| Rule finds 113 matches in the last hour: `113 > 99`
+| Rule is active and user is alerted.
+| `Execution 2 (0:01)`
+| Rule finds 127 matches in the last hour. 105 of the matches are duplicates that were already alerted on previously, so you actually have 22 matches: `22 !> 99`
+| No alert.
+| `Execution 3 (0:02)`
+| Rule finds 159 matches in the last hour. 88 of the matches are duplicates that were already alerted on previously, so you actually have 71 matches: `71 !> 99`
+| No alert.
+| `Execution 4 (0:03)`
+| Rule finds 190 matches in the last hour. 71 of them are duplicates that were already alerted on previously, so you actually have 119 matches: `119 > 99`
+| Rule is active and user is alerted.
