[Security Solution] Refactor Rule Details page (#166158)
**Resolves: https://github.com/elastic/kibana/issues/164962**
**Resolves: https://github.com/elastic/kibana/issues/166650**
**Related docs issue:
https://github.com/elastic/security-docs/issues/3970**

## Summary

Refactors Rule Details page by making use of section components from the
rule preview flyout. Namely `RuleAboutSection`, `RuleDefinitionSection`
and `RuleScheduleSection`.

Also fixes a couple UI copy issues:
 - #164962.
 - #166650.


### Checklist
- [x] Any text added follows [EUI's writing
guidelines](https://elastic.github.io/eui/#/guidelines/writing), uses
sentence case text and includes [i18n
support](https://github.com/elastic/kibana/blob/main/packages/kbn-i18n/README.md)
- [x] Documentation
[issue](https://github.com/elastic/security-docs/issues/3970) created.
- [x] Any UI touched in this PR does not create any new axe failures
(run axe in browser:
[FF](https://addons.mozilla.org/en-US/firefox/addon/axe-devtools/),
[Chrome](https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd?hl=en-US))
- [x] This renders correctly on smaller devices using a responsive
layout. (You can test this [in your
browser](https://www.browserstack.com/guide/responsive-testing-on-local-server))
- [x] This was checked for [cross-browser
compatibility](https://www.elastic.co/support/matrix#matrix_browsers)

---------

Co-authored-by: Kibana Machine <42973632+kibanamachine@users.noreply.github.com>

--- a/x-pack/plugins/translations/translations/zh-CN.json
+++ b/x-pack/plugins/translations/translations/zh-CN.json
@@ -30601,7 +30601,7 @@
     "xpack.securitySolution.detectionEngine.createRule.mlRuleTypeDescription": "Machine Learning",
     "xpack.securitySolution.detectionEngine.createRule.newTermsRuleTypeDescription": "新字词",
     "xpack.securitySolution.detectionEngine.createRule.pageTitle": "创建新规则",
-    "xpack.securitySolution.detectionEngine.createRule.QueryLabel": "定制查询",
+    "xpack.securitySolution.detectionEngine.createRule.queryLabel": "定制查询",
     "xpack.securitySolution.detectionEngine.createRule.queryRuleTypeDescription": "查询",
     "xpack.securitySolution.detectionEngine.createRule.ruleActionsField.ruleActionsFormErrorsTitle": "请修复下面所列的问题",
     "xpack.securitySolution.detectionEngine.createRule.rulePreviewDescription": "规则预览反映了您的规则设置和例外的当前配置，单击刷新图标可查看已更新的预览。",
