--- a/packages/kbn-eslint-plugin-i18n/README.mdx
+++ b/packages/kbn-eslint-plugin-i18n/README.mdx
@@ -14,4 +14,4 @@ This rule warns engineers to translate their strings by using i18n.translate fro
 
 ## `@kbn/i18n/strings_should_be_translated_with_formatted_message`
 
-This rule warns engineers to translate their strings by using <FormattedMessage> from the '@kbn/i18n-react' package. It provides an autofix that takes into account the context of the translatable string in the JSX tree and to generate a translation ID.
+This rule warns engineers to translate their strings by using `<FormattedMessage>` from the '@kbn/i18n-react' package. It provides an autofix that takes into account the context of the translatable string in the JSX tree and to generate a translation ID.
