--- a/docs/CHANGELOG.asciidoc
+++ b/docs/CHANGELOG.asciidoc
@@ -87,7 +87,15 @@ Review important information about the {kib} 7.17.x releases.
 [[release-notes-7.17.14]]
 == {kib} 7.17.14
 
-The 7.17.14 release contains no significant changes.
+Review the following information about the {kib} 7.17.14 release.
+
+coming::[7.17.14]
+
+[float]
+[[security-update-7.17.14]]
+=== Security update
+
+This version of {kib} contains security fixes. 
 
 [[release-notes-7.17.13]]
 == {kib} 7.17.13
