--- a/docs/developer/plugin-list.asciidoc
+++ b/docs/developer/plugin-list.asciidoc
@@ -592,6 +592,10 @@ or dashboards from the Kibana instance, from both server and client-side plugins
 which are particularly useful for ingesting logs.
 
 
+|{kib-repo}blob/{branch}/x-pack/plugins/high_cardinality_indexer[high_cardinality_indexer]
+|WARNING: Missing README.
+
+
 |{kib-repo}blob/{branch}/x-pack/plugins/index_lifecycle_management/README.md[indexLifecycleManagement]
 |You can test that the Frozen badge, phase filtering, and lifecycle information is surfaced in
 Index Management by running this series of requests in Console:
