--- a/docs/developer/plugin-list.asciidoc
+++ b/docs/developer/plugin-list.asciidoc
@@ -592,8 +592,8 @@ or dashboards from the Kibana instance, from both server and client-side plugins
 which are particularly useful for ingesting logs.
 
 
-|{kib-repo}blob/{branch}/x-pack/plugins/high_cardinality_indexer[high_cardinality_indexer]
-|WARNING: Missing README.
+|{kib-repo}blob/{branch}/x-pack/plugins/high_cardinality_indexer/README.md[high_cardinality_indexer]
+|This plugin helps users to easily create fake data with high cardinality. It is useful for testing and benchmarking.
 
 
 |{kib-repo}blob/{branch}/x-pack/plugins/index_lifecycle_management/README.md[indexLifecycleManagement]
