--- a/docs/management/cases/add-connectors.asciidoc
+++ b/docs/management/cases/add-connectors.asciidoc
@@ -1,7 +1,10 @@
 [[add-case-connectors]]
 == Add connectors
 
-preview::[]
+:frontmatter-description: Configure connectors to push case details to external incident management systems.
+:frontmatter-tags-products: [kibana]
+:frontmatter-tags-content-type: [how-to] 
+:frontmatter-tags-user-goals: [configure]
 
 You can add connectors to cases to push information to these external incident
 management systems:
