--- a/docs/management/cases/add-connectors.asciidoc
+++ b/docs/management/cases/add-connectors.asciidoc
@@ -27,7 +27,7 @@ You can create connectors in *{stack-manage-app} > {connectors-ui}*,
 as described in <<action-types>>. Alternatively, you can create them in
 *{stack-manage-app} > Cases*:
 
-. Click *Edit external connection*.
+. Click *Settings*.
 +
 --
 [role="screenshot"]
@@ -53,7 +53,7 @@ configuration details.
 You can create additional connectors, update existing connectors, change
 the default connector, and change case closure options.
 
-. Go to *{stack-manage-app} > Cases*, click *Edit external connection*.
+. Go to *{stack-manage-app} > Cases* and click *Settings*.
 
 . To change whether cases are automatically closed after they are sent to an
 external system, update the case closure options.
