--- a/docs/api/synthetics/synthetics-api.asciidoc
+++ b/docs/api/synthetics/synthetics-api.asciidoc
@@ -3,11 +3,15 @@
 
 The following APIs are available for Synthetics.
 
-* <<add-monitor-api, Add a monitor>> - Add a new monitor to Synthetics app.
+* <<add-monitor-api, Add monitor>> - Add a new monitor to Synthetics app.
 
-* <<update-monitor-api, Update a monitor>> - Update an existing monitor in Synthetics app.
+* <<update-monitor-api, Update monitor>> - Update an existing monitor in Synthetics app.
 
-* <<delete-monitors-api, Delete a monitor>> - Delete an existing monitor from Synthetics app.
+* <<delete-monitors-api, Delete monitor>> - Delete an existing monitor from Synthetics app.
+
+* <<get-monitor-api, Get monitor>> to get a monitor.
+
+* <<find-monitors-api, Find monitors>> to find monitors.
 
 * <<get-parameters-api, Get Parameters API>> to get a parameter(s).
 
@@ -26,6 +30,8 @@ The following APIs are available for Synthetics.
 include::monitors/add-monitor-api.asciidoc[leveloffset=+1]
 include::monitors/update-monitor-api.asciidoc[leveloffset=+1]
 include::monitors/delete-monitor-api.asciidoc[leveloffset=+1]
+include::monitors/get-monitor-api.asciidoc[leveloffset=+1]
+include::monitors/find-monitors-api.asciidoc[leveloffset=+1]
 include::params/add-param.asciidoc[leveloffset=+1]
 include::params/get-params.asciidoc[leveloffset=+1]
 include::params/edit-param.asciidoc[leveloffset=+1]
