--- a/docs/management/connectors/action-types/servicenow-sir.asciidoc
+++ b/docs/management/connectors/action-types/servicenow-sir.asciidoc
@@ -13,8 +13,75 @@ https://developer.servicenow.com/dev.do#!/reference/api/sandiego/rest/c_ImportSe
 to create {sn} security incidents. You can use the connector for rule actions and cases.
 
 [float]
+[[define-servicenow-sir-ui]]
+=== Create connectors in {kib}
+
+You can create connectors in *{stack-manage-app} > {connectors-ui}*
+or as needed when you're creating a rule. You must choose whether to use OAuth for authentication.
+
+[role="screenshot"]
+image::management/connectors/images/servicenow-sir-connector-basic.png[{sn-sir} connector using basic auth]
+
+[role="screenshot"]
+image::management/connectors/images/servicenow-sir-connector-oauth.png[{sn-sir} connector using OAuth]
+
+[float]
+[[servicenow-sir-connector-configuration]]
+==== Connector configuration
+
+{sn-sir} connectors have the following configuration properties:
+
+Name::      The name of the connector.
+Is OAuth::  The type of authentication to use.
+URL::       {sn} instance URL.
+Username::  Username for HTTP Basic authentication.
+Password::  Password for HTTP Basic authentication.
+User Identifier:: Identifier to use for OAuth type authentication. This identifier should be the *User field* you selected during setup. For example, if the selected *User field* is *Email*, the user identifier should be the user's email address.
+Client ID:: The client ID assigned to your OAuth application.
+Client Secret:: The client secret assigned to your OAuth application.
+JWT Key ID:: The key ID assigned to the JWT verifier map of your OAuth application.
+Private Key:: The RSA private key generated during setup.
+Private Key Password:: The password for the RSA private key generated during setup, if set.
+
+[float]
+[[servicenow-sir-action-configuration]]
+=== Test connectors
+
+You can test connectors with the <<execute-connector-api,run connector API>> or
+as you're creating or editing the connector in {kib}. For example:
+
+[role="screenshot"]
+image::management/connectors/images/servicenow-sir-params-test.png[{sn-sir} params test]
+
+{sn-sir} actions have the following configuration properties.
+
+Short description::    A short description for the incident, used for searching the contents of the knowledge base.
+Priority::             The priority of the incident.
+Category::             The category of the incident.
+Subcategory::          The subcategory of the incident.
+Correlation ID::       Connectors using the same Correlation ID will be associated with the same {sn} incident. This value determines whether a new {sn} incident will be created or an existing one is updated. Modifying this value is optional; if not modified, the rule ID and alert ID are combined as `{{ruleID}}:{{alert ID}}` to form the Correlation ID value in {sn}. The maximum character length for this value is 100 characters.
+
+NOTE: Using the default configuration of `{{ruleID}}:{{alert ID}}` ensures that {sn} will create a separate incident record for every generated alert that uses a unique alert ID. If the rule generates multiple alerts that use the same alert IDs, {sn} creates and continually updates a single incident record for the alert.
+
+Correlation Display::  A descriptive label of the alert for correlation purposes in {sn}.
+Description::          The details about the incident.
+Additional comments::  Additional information for the client, such as how to troubleshoot the issue.
+
+[float]
+[[servicenow-sir-connector-networking-configuration]]
+=== Connector networking configuration
+
+Use the <<action-settings, Action configuration settings>> to customize connector networking configurations, such as proxies, certificates, or TLS settings. You can set configurations that apply to all your connectors or use `xpack.actions.customHostSettings` to set per-host configurations.
+
+[float]
+[[configuring-servicenow-sir]]
+=== Configure {sn-sir}
+
+{sn} offers free https://developer.servicenow.com/dev.do#!/guides/madrid/now-platform/pdi-guide/obtaining-a-pdi[Personal Developer Instances], which you can use to test incidents.
+
+[float]
 [[servicenow-sir-connector-prerequisites]]
-=== Prerequisites
+==== Prerequisites
 After upgrading from {stack} version 7.15.0 or earlier to version 7.16.0 or later, you must complete the following within your {sn} instance before creating a new {sn-sir} connector or <<servicenow-sir-connector-update, updating an existing one>>:
 
 . Install https://store.servicenow.com/sn_appstore_store.do#!/store/application/2f0746801baeb01019ae54e4604bcb0f[Elastic for Security Operations (SecOps)] from the {sn} Store.
@@ -94,70 +161,3 @@ To update a deprecated connector:
 .. Enter the URL of your {sn} instance.
 .. Enter the username and password of your {sn} instance.
 . Click *Update*.
-
-[float]
-[[define-servicenow-sir-ui]]
-=== Create connectors in {kib}
-
-You can create connectors in *{stack-manage-app} > {connectors-ui}*
-or as needed when you're creating a rule. You must choose whether to use OAuth for authentication.
-
-[role="screenshot"]
-image::management/connectors/images/servicenow-sir-connector-basic.png[{sn-sir} connector using basic auth]
-
-[role="screenshot"]
-image::management/connectors/images/servicenow-sir-connector-oauth.png[{sn-sir} connector using OAuth]
-
-[float]
-[[servicenow-sir-connector-configuration]]
-==== Connector configuration
-
-{sn-sir} connectors have the following configuration properties:
-
-Name::      The name of the connector.
-Is OAuth::  The type of authentication to use.
-URL::       {sn} instance URL.
-Username::  Username for HTTP Basic authentication.
-Password::  Password for HTTP Basic authentication.
-User Identifier:: Identifier to use for OAuth type authentication. This identifier should be the *User field* you selected during setup. For example, if the selected *User field* is *Email*, the user identifier should be the user's email address.
-Client ID:: The client ID assigned to your OAuth application.
-Client Secret:: The client secret assigned to your OAuth application.
-JWT Key ID:: The key ID assigned to the JWT verifier map of your OAuth application.
-Private Key:: The RSA private key generated during setup.
-Private Key Password:: The password for the RSA private key generated during setup, if set.
-
-[float]
-[[servicenow-sir-action-configuration]]
-=== Test connectors
-
-You can test connectors with the <<execute-connector-api,run connector API>> or
-as you're creating or editing the connector in {kib}. For example:
-
-[role="screenshot"]
-image::management/connectors/images/servicenow-sir-params-test.png[{sn-sir} params test]
-
-{sn-sir} actions have the following configuration properties.
-
-Short description::    A short description for the incident, used for searching the contents of the knowledge base.
-Priority::             The priority of the incident.
-Category::             The category of the incident.
-Subcategory::          The subcategory of the incident.
-Correlation ID::       Connectors using the same Correlation ID will be associated with the same {sn} incident. This value determines whether a new {sn} incident will be created or an existing one is updated. Modifying this value is optional; if not modified, the rule ID and alert ID are combined as `{{ruleID}}:{{alert ID}}` to form the Correlation ID value in {sn}. The maximum character length for this value is 100 characters.
-
-NOTE: Using the default configuration of `{{ruleID}}:{{alert ID}}` ensures that {sn} will create a separate incident record for every generated alert that uses a unique alert ID. If the rule generates multiple alerts that use the same alert IDs, {sn} creates and continually updates a single incident record for the alert.
-
-Correlation Display::  A descriptive label of the alert for correlation purposes in {sn}.
-Description::          The details about the incident.
-Additional comments::  Additional information for the client, such as how to troubleshoot the issue.
-
-[float]
-[[servicenow-sir-connector-networking-configuration]]
-=== Connector networking configuration
-
-Use the <<action-settings, Action configuration settings>> to customize connector networking configurations, such as proxies, certificates, or TLS settings. You can set configurations that apply to all your connectors or use `xpack.actions.customHostSettings` to set per-host configurations.
-
-[float]
-[[configuring-servicenow-sir]]
-=== Configure {sn-sir}
-
-{sn} offers free https://developer.servicenow.com/dev.do#!/guides/madrid/now-platform/pdi-guide/obtaining-a-pdi[Personal Developer Instances], which you can use to test incidents.
